feat(model): Update model to match data structure of co2eq.calculationDetails
